rnsc/test_data/integration/error/parser/class_header/trailing_dot_method.rns
.class Class .method kababoom
.super java/lang/Object
.end